// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SecondaryHeader Renders Secondary Header with children 1`] = `
<ForwardRef($6c848be8e8bffe98$var$View)
  backgroundColor="gray-75"
  borderBottomColor="light"
  borderBottomWidth="thin"
  borderTopColor="light"
  borderTopWidth="thin"
  paddingX="size-150"
  paddingY="size-100"
>
  <ForwardRef($65aafe8662d00781$var$Grid)
    areas={
      Array [
        "breadcrumbs title options",
      ]
    }
    columns={
      Array [
        "1fr",
        "1fr",
        "1fr",
      ]
    }
    maxHeight="size-600"
  >
    <ForwardRef($299bf776d9162a05$var$Breadcrumbs)
      onAction={[Function]}
      size="M"
    >
      <$c870f3b549c61b6b$var$Item
        key="/"
      >
        Home
      </$c870f3b549c61b6b$var$Item>
      <$c870f3b549c61b6b$var$Item
        key="/dashboards"
      >
        Dashboards
      </$c870f3b549c61b6b$var$Item>
      <$c870f3b549c61b6b$var$Item
        key="/dashboards/d123"
      >
        Inventory Dashboard
      </$c870f3b549c61b6b$var$Item>
      <$c870f3b549c61b6b$var$Item
        key="/dashboards/d123/v123"
      >
        Stock
      </$c870f3b549c61b6b$var$Item>
    </ForwardRef($299bf776d9162a05$var$Breadcrumbs)>
    <ForwardRef($a2ef5497697e8437$var$Flex)
      alignItems="center"
      gridArea="title"
      justifyContent="center"
    >
      <ForwardRef($c7c750c966e80a46$var$Heading)
        level={3}
        marginY="size-0"
      >
        SH Unit Test
      </ForwardRef($c7c750c966e80a46$var$Heading)>
    </ForwardRef($a2ef5497697e8437$var$Flex)>
    <ForwardRef($a2ef5497697e8437$var$Flex)
      alignItems="center"
      gridArea="options"
      justifyContent="end"
    >
      <ForwardRef($842a195ed1671b15$var$Button)
        marginX="size-150"
        variant="primary"
      >
        Edit
      </ForwardRef($842a195ed1671b15$var$Button)>
      <ForwardRef($842a195ed1671b15$var$Button)
        variant="secondary"
      >
        Save
      </ForwardRef($842a195ed1671b15$var$Button)>
    </ForwardRef($a2ef5497697e8437$var$Flex)>
  </ForwardRef($65aafe8662d00781$var$Grid)>
</ForwardRef($6c848be8e8bffe98$var$View)>
`;

exports[`SecondaryHeader Renders Secondary Header with default Props 1`] = `
<ForwardRef($6c848be8e8bffe98$var$View)
  backgroundColor="gray-75"
  borderBottomColor="light"
  borderBottomWidth="thin"
  borderTopColor="light"
  borderTopWidth="thin"
  paddingX="size-150"
  paddingY="size-100"
>
  <ForwardRef($65aafe8662d00781$var$Grid)
    areas={
      Array [
        "breadcrumbs title options",
      ]
    }
    columns={
      Array [
        "1fr",
        "1fr",
        "1fr",
      ]
    }
    maxHeight="size-600"
  >
    <ForwardRef($299bf776d9162a05$var$Breadcrumbs)
      onAction={[Function]}
      size="M"
    >
      <$c870f3b549c61b6b$var$Item
        key="/"
      >
        Home
      </$c870f3b549c61b6b$var$Item>
      <$c870f3b549c61b6b$var$Item
        key="/dashboards"
      >
        Dashboards
      </$c870f3b549c61b6b$var$Item>
      <$c870f3b549c61b6b$var$Item
        key="/dashboards/d123"
      >
        Inventory Dashboard
      </$c870f3b549c61b6b$var$Item>
      <$c870f3b549c61b6b$var$Item
        key="/dashboards/d123/v123"
      >
        Stock
      </$c870f3b549c61b6b$var$Item>
    </ForwardRef($299bf776d9162a05$var$Breadcrumbs)>
    <ForwardRef($a2ef5497697e8437$var$Flex)
      alignItems="center"
      gridArea="title"
      justifyContent="center"
    >
      <ForwardRef($c7c750c966e80a46$var$Heading)
        level={3}
        marginY="size-0"
      >
        SH Unit Test
      </ForwardRef($c7c750c966e80a46$var$Heading)>
    </ForwardRef($a2ef5497697e8437$var$Flex)>
    <ForwardRef($a2ef5497697e8437$var$Flex)
      alignItems="center"
      gridArea="options"
      justifyContent="end"
    />
  </ForwardRef($65aafe8662d00781$var$Grid)>
</ForwardRef($6c848be8e8bffe98$var$View)>
`;
